@@ -1,0 +1,1 @@
+<button mat-icon-button color="primary" class="annotation-relation-set-btn" [disabled]="disabled" (click)="setSelectedAnnotation()"><mat-icon>arrow_circle_left</mat-icon></button>
